# gevulot-risc0-integration

./: Cargo.toml  README.md  example-workload.json  manifest_prover.json  manifest_verifier.json  prover.json
example-workload-guest/: .rustc_info.json  Cargo.toml
example-workload-guest/guest/: Cargo.toml
example-workload-guest/guest/src/: main.rs
example-workload-input/: Cargo.toml
example-workload-input/src/: input_builder.rs  main.rs
prover/: Cargo.toml
prover/src/: cli.rs  error.rs  lib.rs
risc0-hello-world/: Cargo.toml
risc0-hello-world/host/src/: main.rs
risc0-hello-world/host_prove/: Cargo.toml
risc0-hello-world/host_prove/src/: main.rs
risc0-hello-world/methods/guest/: Cargo.toml
src/: cli.rs  lib.rs  main.rs
verifier/: Cargo.toml
verifier/src/: cli.rs  lib.rs
