[package]
name = "gevulot-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prover_gevulot"
path = "src/bin/prover_gevulot.rs"

[[bin]]
name = "prover_offchain"
path = "src/bin/prover_offchain.rs"

[dependencies]
gevulot-shim = { git = "https://github.com/gevulotnetwork/gevulot", package = "gevulot-shim" }
risc0-zkvm = "0.21.0"
serde = "1.0.202"
serde_json = "1.0.117"
