[package]
name = "gevulot-test"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "prover_gevulot"
path = "src/bin/prover_gevulot.rs"

[[bin]]
name = "prover_offchain"
path = "src/bin/prover_offchain.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
gevulot-shim = { git = "https://github.com/gevulotnetwork/gevulot", package = "gevulot-shim" }
hex = "0.4.3"
risc0-zkvm = { version = "0.19.1", features = ["prove"] } # avoid prove for client
serde = "1.0.202"
serde_json = "1.0.117"
