[package]
name = "example-workload-input"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.19.1", default-features = false }
serde = { version = "1.0", default-features = false }
bytemuck = { version = "1.16.0", default-features = false }
hex = { version = "0.4.3", default-features = false }
serde_json = { version = "1.0.117", default-features = false, features = ["alloc"] }
