[package]
name = "square_check_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
risc0-zkvm = { version = "0.21.0", default-features = false }

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.dev.build-override]
opt-level = 3

[profile.release]
debug = 1
lto = true

[profile.release.build-override]
opt-level = 3
